Fixed a small spacing issue with the navigation highlight.

--- a/css/main.styl
+++ b/css/main.styl
@@ -155,7 +155,7 @@ hr
   border 0
 
 .nav .current::after
-  bottom -6px
+  bottom -4px
   content "▾"
   left 0
   position absolute
@@ -165,7 +165,7 @@ hr
   transition all 150ms linear
   opacity 0.7
 
-  line-height 4px
+  line-height 2px
   text-align center
 
 .nav a:hover
